# COMP3352-M1-Hussain-Samra

./: .ghc.environment.aarch64-darwin-9.6.7  CHANGELOG.md  COMP3352-Lab5.cabal  Env.hs  N1Passes.hs  N1PassesSpec.hs  README.md
n1-tests/: n1-01.ni  n1-02.ni  n1-03.ni  n1-04.ni  n1-05.ni  n1-06.ni  n1-07.ni  n1-08.ni  n1-09.ni  n1-10.ni  n1-11.ni  n1-12.ni  n1-13.ni  n1-14.ni  n1-15.ni
src/: AssignHomes.hs  C0PassesSpec.hs  ComposePasses.hs  Env.hs  Main.hs  N1PassesSpec.hs  PatchInstructions.hs  Spec.hs  X86b.hs  X86bPassesSpec.hs
src/CPasses/: C0.hs  C0Passes.hs
src/Graph/: Graph.hs
src/NiPasses/: N1Passes.hs
src/Parsers/: CParser.hs  NiParser.hs
src/X86Passes/: InterferenceGraph.hs  Liveness.hs  LivenessSpec.hs  WriteToFile.hs  X86bPasses.hs
test/: InterferenceGraphSpec.hs
